# Patches

./: .gitignore  .prettierrc  AGENTS.md  PROJECT_API_FLOW.md  README.md  TODO.md  package.json  pnpm-lock.yaml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ee9638af6242_create_puzzle_results_table.py  eebeff67e20d_create_core_tables.py
backend/app/: config.py  database.py  db.py  main.py
backend/app/api/: extractions.py  puzzles.py  uploads.py
backend/app/models/: __init__.py  extraction_job.py  puzzle.py  review_record.py  saved_puzzle.py  upload.py
backend/app/repositories/: puzzle.py
backend/app/schemas/: extraction.py  puzzle.py  upload.py
backend/app/services/: cell_detect.py  cell_ocr.py  cv_extract.py  grid_detect.py  image_preprocess.py  layout_detect.py  parse_patches.py  patch_detect.py  patch_ocr.py  path_builder.py  review_markdown.py  serialize_patches.py  validate_patches.py
backend/tests/: conftest.py  fixture_helpers.py  test_cell_detect.py  test_cv_extract.py  test_extractions_api.py  test_health.py  test_layout_detect.py  test_parse_patches.py  test_path_builder.py  test_puzzles_api.py  test_review_markdown.py  test_serialize_patches.py  test_uploads_api.py  test_validate_patches.py
backend/tests/api/: test_puzzles_api.py
backend/tests/fixtures/puzzles/: a.patches  b.patches  c.patches  d.patches  (+1 more)
backend/tests/integration/: test_cv_extract.py  test_patch_detect.py
backend/tests/unit/: test_image_preprocess.py  test_parse_patches.py  test_path_builder.py
(+10 files in other folders)
